syntax = "proto3";

package questnav.protos.data;
option csharp_namespace = "QuestNav.Protos.Generated";
option java_package = "gg.questnav.questnav.protos.generated";

// Import geometry messages
import "geometry3d.proto";

// Tracking data that is sent every loop
message ProtobufQuestNavFrameData {
  // Number of frames processed by the Quest
  int32 frame_count = 1;
  
  // Time (in seconds) since the QuestNav app started
  double timestamp = 2;

  // The 3d field-relative position of the quest
  wpi.proto.ProtobufPose3d pose3d = 3;
}

// Device data that is sent slower
message ProtobufQuestNavDeviceData {
  // Number of times the Quest has lost tracking after having it since the app started
  int32 tracking_lost_counter = 1;
  
  // If the Quest is currently tracking?
  bool currently_tracking = 2;
  
  // The battery percentage of the Quest
  int32 battery_percent = 3;
}