syntax = "proto3";

package proto.geometry;

// Translation2d represents a 2D translation (x, y coordinates)
// This mirrors WPILib's Translation2d class
message Translation2d {
  // X coordinate in meters
  double x = 1;

  // Y coordinate in meters  
  double y = 2;
}

// Rotation2d represents a 2D rotation
// This mirrors WPILib's Rotation2d class
message Rotation2d {
  // Rotation angle in radians
  double radians = 1;
}

// Pose2d represents a 2D pose (position + orientation)
// This mirrors WPILib's Pose2d class which combines Translation2d and Rotation2d
message Pose2d {
  // The translation component (x, y position)
  Translation2d translation = 1;

  // The rotation component (orientation)
  Rotation2d rotation = 2;
}